--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "homepage": "https://github.com/KimmEd/kimmweb#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.5",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
