--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/KimmEd/kimmweb#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
@@ -38,8 +37,6 @@
   "devDependencies": {
     "dotenv": "^10.0.0",
     "eslint": "^8.9.0",
-    "nodemon": "^2.0.15",
-    "pino": "^7.8.0",
-    "pino-pretty": "^7.5.1"
+    "nodemon": "^2.0.15"
   }
 }
