--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "devStart": "nodemon app.js | pino-pretty -i pid,hostname -t yyyy-mm-dd HH:MM:ss",
+    "devStart": "nodemon app.js",
     "noDebugger": "nodemon app.js"
   },
   "repository": {
