--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "async": "^3.2.2",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
-    "ejs": "^3.1.6",
+    "ejs": "^3.0.2",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "helmet": "^5.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.5",
     "multer": "^1.4.4",
