--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.1.5",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   },
