--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "dotenv": "^10.0.0",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
