--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.1.5",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
@@ -46,6 +47,10 @@
     "nodemon": "^2.0.15"
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "tabWidth": 4
   }
 }
